--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                 aria-label="close" class="close" onclick="closealertmail()"><span aria-hidden="true">×</span></button>
                 <strong>Скопирован</strong>
             Адрес электронной почты: alexandrkalinkin@mail.ru</div>
-        <script src="/script.js"></script>
-        <script src="/forfooter.js"></script>
+        <script src="./script.js"></script>
+        <script src="./forfooter.js"></script>
 
 </body>
 
